# darkstar

./: .gitignore  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DARKSTAR_APP_GUIDE.md  DARKSTAR_ARCHITECTURE.md  DARKSTAR_CLI_GUIDE.md  DASP_CRYPTO_MATH.md  DASP_NIST_COMPLIANCE.md  DASP_SYSTEM_FLOW.md  DSPNA_512_CRYPTO_MATH.md  DSPNA_512_NIST_COMPLIANCE.md  DSPNA_512_SYSTEM_FLOW.md  LICENSE  README.md  SECURITY.md  WASM_README.md  angular.json  audit.json  audit.txt  capacitor.config.ts  checksums.txt  cuda_test.json  docker-compose.yml  eslint.config.js  forge.config.js  interop_results.txt  karma.conf.js  kat_vectors.json  nodemon.json  package-lock.json  package.json  run_interop.ts  run_tests.js  temp_go_test.go  temp_test.js  temp_test.py  test_output.txt  tsconfig.electron.json  tsconfig.json
.github/: copilot-instructions.md
c/: Dockerfile  LICENSE  Makefile  README.md  aes.h  build.bat  fips202.c  fips202.h  gf_math.c  icon.res  main.c  ml_kem.c  ml_kem.h  out.txt  poly.c  poly.h  poly_sampling.c  rng.c  rng.h  sha512.c  spna_engine.c
csharp/: DarkstarCSharp.csproj  Dockerfile  Program.cs  README.md
cuda/: Dockerfile  Makefile  README.md  build_cuda.bat  build_test.bat  d-asp_cuda.exp  d-asp_cuda.lib  d-asp_test.exp  d-spna-512_cuda.exp  d-spna-512_cuda.lib  dasp_cli.cu  dasp_cuda.h  dasp_kernel.cu  data.json  data3.json  sk3.hex  test.cu
d-asp/: .gitignore  DASP_CRYPTO_MATH.md  DASP_NIST_COMPLIANCE.md  DASP_SYSTEM_FLOW.md  README.md  interop_test.py  kat_vectors.json
d-asp/rust/: Cargo.toml  Dockerfile  README.md  interop.json  keys.txt
d-asp/rust/src/: engine.rs  lib.rs  main.rs  wasm_bindings.rs
d-kasp-1024/: README.md
d-kasp-512/: .gitignore  README.md  interop_log.txt  interop_test.py
darkstar-encry/: .gitignore  README.md
docker/: builder.Dockerfile  csharp.Dockerfile  dart.Dockerfile  elixir.Dockerfile  go.Dockerfile  java.Dockerfile  (+10 more)
rust/: Cargo.toml  README.md  build.rs  deny.toml  payload.txt  test_enc.json  test_keys.txt
rust/.cargo/: config.toml
rust/src/: analysis_math.rs  engine.rs  lib.rs  main.rs  wasm_bindings.rs
(+397 files in other folders)
