[package]
name = "d-asp"
version = "1.0.3"
edition = "2021"
authors = ["Victor Kane"]
license = "CC0-1.0"

[lib]
name = "dasp_crypto"
crate-type = ["cdylib", "rlib"]

[dependencies]
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.6"
hex = "0.4"
zeroize = "1.7"
ml-kem = "0.2"
getrandom = { version = "0.2", features = ["custom"] }


[build-dependencies]
winres = "0.1"
