[package]
name = "d-asp"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

[lib]
name = "dasp_crypto"
crate-type = ["cdylib"]

[dependencies]
aes = "0.8"
cbc = "0.1"
pbkdf2 = "0.12"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
hex = "0.4"
zeroize = "1.7"
aes-gcm = "0.10.3"
ml-kem = "0.2"
